feat: Add stock photos for cards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <h4 class="nav-icon">PERSONAL VIDEOS</h4>
           </section>
         <section class="right-side-container">
-          <section class="admin-area">
+          <section class="admin-container">
             <img class="" src="./assets/admin.webp" alt="Admin Icon">
             <h4 class="admin-username">Admin Username</h4>
             <img class="" src="./assets/arrow.jpg" alt="Down Arrow">
@@ -29,7 +29,13 @@
         </section>
       </nav>
       <main>
-
+        <section class="cards-grid">
+          <section class="card">
+            <section class="top-section">
+              
+            </section>
+          </section>
+        </section>
       </main>
     </body>
   </html>
