feat: Save first draft of HTML with all cards

--- a/index.html
+++ b/index.html
@@ -4,36 +4,266 @@
   <html lang="en" dir="ltr">
     <head>
       <link rel="stylesheet" href="./styles.css" />
-      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+      <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+        rel="stylesheet"
+      />
       <title>Static Comp</title>
     </head>
     <body>
       <nav class="top-nav">
         <section class="list-items-container">
-          <img class="nav-icon" src="./assets/share.png" alt="Share Icon">
-          <h4 class="nav-list-item">SHARES</h5>
-          <img class="nav-icon" src="./assets/playlist.png" alt="Playlist Icon">
-          <h4 class="nav-list-item">PLAYLISTS</h5>
-          <img class="nav-icon" src="./assets/user.png" alt="User Icon"
+          <img class="nav-icon" src="./assets/share.png" alt="Shares Icon" />
+          <h4 class="nav-list-item">SHARES</h4>
+          <img
+            class="nav-icon"
+            src="./assets/playlist.png"
+            alt="Playlist Icon"
+          />
+          <h4 class="nav-list-item">PLAYLISTS</h4>
+          <img class="nav-icon" src="./assets/user.png" alt="User Icon" />
           <h4 class="nav-icon">PERSONAL VIDEOS</h4>
-          </section>
+        </section>
         <section class="right-side-container">
-          <section class="admin-container">
-            <img class="" src="./assets/admin.webp" alt="Admin Icon">
+          <div class="admin-container">
+            <img class="" src="./assets/admin.webp" alt="Admin Icon" />
             <h4 class="admin-username">Admin Username</h4>
-            <img class="" src="./assets/arrow.jpg" alt="Down Arrow">
-          </section>
-          <section class="site-logo">
-            <img class="site-logo-image" src="./assets/sharing.jpg" alt="Video Sharing Logo">
-          </section>
+            <img class="" src="./assets/arrow.jpg" alt="Down Arrow" />
+          </div>
+          <div class="site-logo">
+            <img
+              class="site-logo-image"
+              src="./assets/sharing.jpg"
+              alt="Video Sharing Logo"
+            />
+          </div>
         </section>
       </nav>
       <main>
         <section class="cards-grid">
           <section class="card">
-            <section class="top-section">
-              
-            </section>
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
           </section>
         </section>
       </main>
