feat: Add share icon to all cards in HTML

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <section class="cards-grid">
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -71,7 +75,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -99,7 +107,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -127,7 +139,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -155,7 +171,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -183,7 +203,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -211,7 +235,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -239,7 +267,11 @@
           </section>
           <section class="card">
             <div class="top-section">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share2.jpg"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
