feat: Add styling to cards section, remove grid, and add new elements to HTML for styling

--- a/index.html
+++ b/index.html
@@ -51,214 +51,234 @@
           </section>
         </div>
       </nav>
-      <main class="cards-grid">
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
+      <main>
+        <section class="cards-grid">
+          <section class="card">
+            <div class="top-section one">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
+          </section>
+          <section class="card">
+            <div class="top-section two">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
+          </section>
+          <section class="card">
+            <div class="top-section three">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-          </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
+          <section class="card">
+            <div class="top-section four">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
+            </div>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
+            </div>
+          </section>
         </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
+        <section class="cards-grid">
+          <section class="card">
+            <div class="top-section five">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
+          </section>
+          <section class="card">
+            <div class="top-section six">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
+          </section>
+          <section class="card">
+            <div class="top-section seven">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
+          </section>
+          <section class="card">
+            <div class="top-section eight">
+              <img class="top-section-icon" src="" alt="Share Icon" />
+              <div class="top-right-of-card">
+                <h4 class="views">VIEWS</h4>
+                <h4 class="view-count">02</h4>
+              </div>
             </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
+            <div class="text-section">
+              <div class="name-section">
+                <h4 class="name">Recipient's Namehere</h4>
+                <h4 class="date">Monday 01/23/16 10:22am</h4>
+              </div>
+              <div class="link-section">
+                <h4 class="link">
+                  http://1win.2winstage.com/p/recipients_name
+                </h4>
+              </div>
+              <div class="playlist-section">
+                <h4 class="playlist">PLAYLIST</h4>
+                <h4 class="playlist-name">Name of Playlist</h4>
+              </div>
+              <div class="attachments-section">
+                <h4 class="attachments">ATTACHMENTS</h4>
+                <h4 class="attachment-count">04</h4>
+              </div>
             </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
-            </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
-            </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
-            </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
-            </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
-            </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
-            </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
-            </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
-            </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
-            </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
-            </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
-            </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
-            </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="top-section">
-            <img class="top-section-icon" src="" alt="Share Icon" />
-            <div class="top-right-of-card">
-              <h4 class="views">VIEWS</h4>
-              <h4 class="view-count">02</h4>
-            </div>
-          </div>
-          <div class="text-section">
-            <div class="name-section">
-              <h4 class="name">Recipient's Namehere</h4>
-              <h4 class="date">Monday 01/23/16 10:22am</h4>
-            </div>
-            <div class="link-section">
-              <h4 class="link">http://1win.2winstage.com/p/recipients_name</h4>
-            </div>
-            <div class="playlist-section">
-              <h4 class="playlist">PLAYLIST</h4>
-              <h4 class="playlist-name">Name of Playlist</h4>
-            </div>
-            <div class="attachments-section">
-              <h4 class="attachments">ATTACHMENTS</h4>
-              <h4 class="attachment-count">04</h4>
-            </div>
-          </div>
+          </section>
         </section>
       </main>
     </body>
