feat: Add styling on grid

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </nav>
       <main>
-        <section class="cards-grid">
+        <section class="cards-grid first">
           <section class="card">
             <div class="top-section one">
               <img class="top-section-icon" src="" alt="Share Icon" />
