feat: Add styling to grid and Shares section

--- a/index.html
+++ b/index.html
@@ -14,36 +14,25 @@
       <nav>
         <div class="top-section-nav">
           <section class="list-items-container">
-            <div class="shares">
-              <img
-                class="nav-icon"
-                src="./assets/share.png"
-                alt="Shares Icon"
-              />
-              <h4 class="nav-list-item">SHARES</h4>
-            </div>
-            <div class="playlists">
-              <img
-                class="nav-icon"
-                src="./assets/playlist.png"
-                alt="Playlist Icon"
-              />
-              <h4 class="nav-list-item">PLAYLISTS</h4>
-            </div>
-            <div class="videos">
-              <img class="nav-icon" src="./assets/user.png" alt="User Icon" />
-              <h4 class="nav-list-item">PERSONAL VIDEOS</h4>
-            </div>
+            <button class="nav-list-item">
+              <img class="nav-icon" src="./assets/share.png" />SHARES
+            </button>
+            <button class="nav-list-item">
+              <img class="nav-icon" src="./assets/playlist.png" />PLAYLISTS
+            </button>
+            <button class="nav-list-item">
+              <img class="nav-icon" src="./assets/user.png" />PERSONAL VIDEOS
+            </button>
           </section>
           <section class="right-side-container">
             <div class="admin-container">
               <img
                 class="admin-icon"
-                src="./assets/admin.webp"
+                src="./assets/admin.png"
                 alt="Admin Icon"
               />
-              <h4 class="admin-username">Admin Username</h4>
-              <img class="" src="" alt="Down Arrow" />
+              <button class="admin-username">Admin Username</button>
+              <button class="admin-list"><img src="" /></button>
             </div>
             <div class="site-logo">
               <img class="site-logo-image" src="" alt="Video Sharing Logo" />
@@ -52,7 +41,8 @@
         </div>
       </nav>
       <main>
-        <section class="cards-grid first">
+        <section class="shares-view">Shares</section>
+        <section class="cards-grid">
           <section class="card">
             <div class="top-section one">
               <img class="top-section-icon" src="" alt="Share Icon" />
