feat: Change theme to cat shelter

--- a/index.html
+++ b/index.html
@@ -15,28 +15,27 @@
         <div class="top-section-nav">
           <section class="list-items-container">
             <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/share.png" />SHARES
+              <img class="nav-icon" src="./assets/all_cats.png" />All Cats
             </button>
             <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/playlist.png" />PLAYLISTS
+              <img class="nav-icon" src="./assets/resume.png" />Adoption
+              Application
             </button>
             <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/user.png" />PERSONAL VIDEOS
+              <img class="nav-icon" src="./assets/donate.png" />Donate Here
             </button>
           </section>
           <section class="right-side-container">
-            <div class="admin-container">
-              <img
-                class="admin-icon"
-                src="./assets/admin.png"
-                alt="Admin Icon"
-              />
-              <button class="admin-username">Admin Username</button>
-              <button class="admin-list"><img src="" /></button>
-            </div>
-            <div class="site-logo">
-              <img class="site-logo-image" src="" alt="Video Sharing Logo" />
-            </div>
+            <section class="user-container">
+              <img class="user-icon" src="./assets/user.png" alt="User Icon" />
+              <button class="username">Hello, Blanche!</button>
+              <button class="user-list">
+                <img src="./assets/list.png" class="down-arrow" />
+              </button>
+            </section>
+            <section class="site-logo">
+              <img class="site-logo-image" src="./assets/logo.png" alt="Cat Logo" />
+            </section>
           </section>
         </div>
       </nav>
