--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
               <img class="nav-icon" src="./assets/all_cats.png" />All Cats
             </button>
             <button class="nav-list-item">
-              <img class="nav-icon" src="./assets/resume.png" />Adoption
-              Application
+              <img class="nav-icon" src="./assets/resume.png" />Application
             </button>
             <button class="nav-list-item">
               <img class="nav-icon" src="./assets/donate.png" />Donate Here
@@ -29,22 +28,30 @@
             <section class="user-container">
               <img class="user-icon" src="./assets/user.png" alt="User Icon" />
               <button class="username">Hello, Blanche!</button>
-              <button class="user-list">
-                <img src="./assets/list.png" class="down-arrow" />
-              </button>
+              <img src="./assets/list.png" class="down-arrow" />
             </section>
             <section class="site-logo">
-              <img class="site-logo-image" src="./assets/logo.png" alt="Cat Logo" />
+              <img
+                class="site-logo-image"
+                src="./assets/logo.png"
+                alt="Cat Logo"
+              />
             </section>
           </section>
         </div>
       </nav>
       <main>
-        <section class="shares-view">Shares</section>
+        <section class="cats-view-container">
+          <section class="cats-view">Cats Available for Adoption</section>
+        </section>
         <section class="cards-grid">
           <section class="card">
             <div class="top-section one">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -52,17 +59,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Chester</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Mouse</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -72,7 +77,11 @@
           </section>
           <section class="card">
             <div class="top-section two">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -80,17 +89,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Izzy</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">String</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -100,7 +107,11 @@
           </section>
           <section class="card">
             <div class="top-section three">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -108,17 +119,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Ellie</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Catnip</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -128,7 +137,11 @@
           </section>
           <section class="card">
             <div class="top-section four">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -136,17 +149,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Benedict</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Spring</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -158,7 +169,11 @@
         <section class="cards-grid">
           <section class="card">
             <div class="top-section five">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -166,17 +181,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Mary</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">String</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -186,7 +199,11 @@
           </section>
           <section class="card">
             <div class="top-section six">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -194,17 +211,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Badger</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Mouse</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -214,7 +229,11 @@
           </section>
           <section class="card">
             <div class="top-section seven">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -222,17 +241,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Samantha</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Fish</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
@@ -242,7 +259,11 @@
           </section>
           <section class="card">
             <div class="top-section eight">
-              <img class="top-section-icon" src="" alt="Share Icon" />
+              <img
+                class="top-section-icon"
+                src="./assets/share.png"
+                alt="Share Icon"
+              />
               <div class="top-right-of-card">
                 <h4 class="views">VIEWS</h4>
                 <h4 class="view-count">02</h4>
@@ -250,17 +271,15 @@
             </div>
             <div class="text-section">
               <div class="name-section">
-                <h4 class="name">Recipient's Namehere</h4>
-                <h4 class="date">Monday 01/23/16 10:22am</h4>
+                <h4 class="name">Bob</h4>
+                <h4 class="breed">Domestic Shorthair</h4>
               </div>
               <div class="link-section">
-                <h4 class="link">
-                  http://1win.2winstage.com/p/recipients_name
-                </h4>
+                <h4 class="link">http://catcatcatcatcatcatcatcatcat</h4>
               </div>
-              <div class="playlist-section">
-                <h4 class="playlist">PLAYLIST</h4>
-                <h4 class="playlist-name">Name of Playlist</h4>
+              <div class="toys-section">
+                <h4 class="favorite-toy">Favorite Toy</h4>
+                <h4 class="toy">Spring</h4>
               </div>
               <div class="attachments-section">
                 <h4 class="attachments">ATTACHMENTS</h4>
